# 3DobjRender

./: 3dobj.hpp  CMakeLists.txt  Objectlist.m  README.md  ReadOBJ.cpp  blenderStandardObj.py  contest.py  contestShapenet.cpp  datagenShapenetObject.sh  datagen_front.sh  datagen_shapenet.sh  datagen_shapenet_object.sh  datagen_shapenet_photo.sh  datagen_shapenet_semantic.sh  modelReplace.py  pose_render.cpp  rending_shapenet.sh  semantic_render.cpp  shatrans.py  sphereview.hpp
modelReplaceLists/: 10_0.txt  10_0.txt~  10_1.txt  11_0.txt  11_0.txt~  11_1.txt  12_0.txt  12_1.txt  1_0.txt  1_0.txt~  1_1.txt  2_0.txt  2_0.txt~  2_1.txt  3_0.txt  3_0.txt~  3_1.txt  4_0.txt  4_0.txt~  4_1.txt  5_0.txt  5_0.txt~  5_1.txt  6_0.txt  6_1.txt  7_0.txt  7_0.txt~  7_1.txt  8_0.txt  8_0.txt~  8_1.txt  9_0.txt  9_0.txt~  9_1.txt
